# Epistemic-Dialectic-Engine

./: .env.example  .gitignore  CLAUDE.md  Project_Details.md  README.md  progress.md  pyproject.toml
config/: elevation_policy.yaml  providers.yaml  thresholds.yaml
docs/framework/:  open_questions.md  cell_definitions.md
ede/: cells.py  pipeline.py  schemas.py
ede/layers/: layer1_classifier.py  layer2_policy.py  layer3_generator.py  layer4_critique.py
ede/llm/: base.py  claude_client.py  gemini_client.py  registry.py
ede/logging/: schema.sql  store.py
ede/prompts/: layer1_classifier.md  layer3_generator.md  layer4_critique.md
tests/: stress_test_runner.py  test_layer2.py  test_pipeline_integration.py  test_schemas.py
tests/fixtures/: sample_queries.json
ui/: streamlit_app.py
